# RL_car

./: .gitignore  README.md  requirements.txt
RL_Flow/: README.md
RL_Flow/paddle_ocr_ros/: fastapi_ocr_service.py  requirements.txt  requirements_fastapi.txt
RL_Flow/paddle_ocr_ros/src/paddle_ocr_ros/: CMakeLists.txt  package.xml
RL_Flow/paddle_ocr_ros/src/paddle_ocr_ros/config/: server_config.yaml
RL_Flow/paddle_ocr_ros/src/paddle_ocr_ros/launch/: paddle_ocr.launch  paddle_ocr_server.launch
RL_Flow/paddle_ocr_ros/src/paddle_ocr_ros/scripts/: ocr_client_test.py  paddle_ocr_node.py  service_monitor.py
RL_Flow/paddle_ocr_ros/src/paddle_ocr_ros/srv/: OCRService.srv
RL_Flow/robot_status_backend/: robot_status_service.py
docker/: Readme.md  docker_run.sh  entrypoint.sh  requirements.txt  startup.sh  webots.dockerfile
models/R4.6.10_W2E4_Fragile_T2.1_20251009_135707/: monitor_logs.monitor.csv
models/R4.6.10_W2E4_T1.1_normal_20251009_140345/: monitor_logs.monitor.csv
models/R4.6.10_W2E4_T3.4_dangerous_20251013_162524/: monitor_logs.monitor.csv
models/R4.6.10_W2E4_T4.1_fragile_20251013_173803/: monitor_logs.monitor.csv
models/R4.6.10_W2E4_T5.2_dangerous_20251013_224357/: monitor_logs.monitor.csv
models/R4.6.10_W2E4_T6.1_normal_20251009_221340/: monitor_logs.monitor.csv
rosbot_navigation/: daily.md  run_training.sh  test_enhanced_manual.py  test_model_auto.py  test_model_webots.py  train_single.py  train_stage1.py
rosbot_navigation/configs/: T1.1.yaml  T2.1.yaml  T3.4.yaml  T4.1.yaml  T5.2.yaml  T6.1.yaml
rosbot_navigation/src/: __init__.py
training_result/: avg_linear_acc_window.csv  avg_linear_vel_window.csv  avg_reward_1000.csv  plot_training_results.py  success_rate_recent_100.csv
training_result/plots/: training_statistics.csv
warehouse/: .warehouse.wbproj
warehouse/protos/: Pioneer3dx.proto  rosbot.proto
warehouse/worlds/: .warehouse.wbproj  .warehouse2.wbproj  .warehouse2_end1.wbproj  .warehouse2_end4.wbproj  .warehouse2_end5.wbproj  .warehouse3.wbproj  .warehouse4.wbproj  .warehouse5_env1.wbproj  warehouse.wbt  warehouse2.wbt  warehouse2_end1.wbt  warehouse2_end2.wbt  warehouse2_end3.wbt  warehouse2_end4.wbt  warehouse2_end5.wbt  warehouse3.wbt  warehouse4.wbt  (+3 more)
(+22 files in other folders)
